--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.78.0",
     "@yudiel/react-qr-scanner": "^2.3.1",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
