--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-hook-form": "^7.65.0",
     "react-leaflet": "^5.0.0",
     "react-qr-code": "^2.0.18",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
@@ -64,6 +65,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-signature-canvas": "^1.0.7",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
