--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
-    "next": "15.5.9",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^19.2.3",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.65.0",
     "react-leaflet": "^5.0.0",
     "react-qr-code": "^2.0.18",
